# diffusion-policy

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  install.sh  pyproject.toml
diffusion/: README.md  pyproject.toml
diffusion/agent/dataset/: sequence.py
diffusion/agent/eval/: eval_agent.py  eval_agent_real.py  eval_agent_sim.py  eval_diffusion_agent_real.py  eval_diffusion_img_agent.py  eval_diffusion_img_agent_real.py
diffusion/agent/pretrain/: train_agent.py  train_diffusion_agent.py  train_il_agent.py
diffusion/agent/val/: val_agent.py  val_agent_real.py  val_diffusion_img_agent_real.py  visualize_obs.ipynb
diffusion/model/common/: mlp.py  transformer.py
diffusion/model/diffusion/: diffusion.py  eta.py  flow.py  mlp_diffusion.py  modules.py  sampling.py  unet.py
diffusion/model/vision/: modules.py  timm_models.py  vision_encoder.py  vit.py
guided_dc/: __init__.py  create_table_obj.py  custom_push_cube.py  custom_random_action.py  custom_scene_builder.py  randomization.py  randomization_config.yaml
guided_dc/assets/: Stainless_Steel_Pan_w_1210011816_generate.glb  Stainless_Steel_Pan_w_1215234136_texture.glb
guided_dc/assets/background/: background.obj.mtl
guided_dc/assets/objects/: Stainless_Steel_Pan_w_1215235448_texture.glb  apple.glb  bowl.glb
guided_dc/assets/table/: material.mtl  table_with_textured_top.glb
guided_dc/cfg/: config.yaml  rrt_config.yaml
guided_dc/cfg/real/pick_and_place/: diffusion_mlp_img.yaml  diffusion_mlp_vit.yaml  diffusion_unet.yaml  diffusion_unet_dino.yaml  diffusion_unet_img.yaml  diffusion_unet_resnet.yaml  diffusion_unet_vit.yaml  flow_unet.yaml
guided_dc/cfg/simulation/: config.yaml  open_drawer.yaml  pick_and_place.yaml  push_cube.yaml
guided_dc/diffusion/agent/dataset/: sequence.py
guided_dc/diffusion/agent/eval/: eval_diffusion_agent.py  eval_diffusion_img_agent.py  eval_diffusion_img_agent_real.py
guided_dc/diffusion/agent/pretrain/: train_agent.py  train_diffusion_agent.py
guided_dc/diffusion/agent/val/: val_diffusion_img_agent_real.py
guided_dc/diffusion/model/common/: dinov2.py  model.ipynb  modules.py  resnet.py  vis_encoder.py  vit.py
guided_dc/diffusion/model/diffusion/: diffusion.py  mlp_diffusion.py  unet.py  unet_new.py
guided_dc/envs/: dummy_env.py  randomized_env.py
guided_dc/envs/agents/: __init__.py  panda_wristcam.py
guided_dc/envs/scenes/: tabletop_scene_builder.py
guided_dc/envs/tasks/: __init__.py  open_drawer.py  pick_and_place.py  push_object.py
guided_dc/envs/wrappers/: randomized_env.py
guided_dc/prompts/: overview.txt
guided_dc/rrt/: motion_planner.py  parallel_rrt.py  rrt.py
guided_dc/scripts/: random_action.py
guided_dc/utils/: LLM_utils.py  camera_utils.py  hdf5_utils.py  io_utils.py  obj_utils.py  pointcloud_utils.py  pose_utils.py  preprocess_utils.py  randomization.py  scheduler.py  tensor_util.py  timer.py  traj_utils.py  vis_utils.py
notebooks/: calculation.ipynb  visualize_eval_real_data.ipynb  visualize_obs.ipynb
scripts/: eval.py  generate_eval.py  multi_gpu.sh  read_camera.py  run.py  set_path.sh  single.sh  val.py  val.sh  val_single_traj.py  visualize_eval_real_data.ipynb
scripts/dataset/: README.md  download_objaverse.py  process_real_dataset.py  process_robomimic_dataset.py  replay_dataset_in_sim.py  visualize_dataset.py
scripts/rrt/: old_rrt.py  pap_rrt.py  replay_trajectory.py  rrt.py
scripts/simulation/: calibrate_wrist_camera.py  collect_sim_trajectory.py  demo_env.py  eval_sim.py  eval_sim_randomization.py  eval_sim_with_randomization.py  pap_rrt.py  random_action.py  replay_real_trajectory.py  replay_trajectory.py
scripts/simulation/motion_planning/: old_rrt.py  rrt.py
scripts/test/: read_camera.py
