[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "guided-dc"
version = "0.1.0"
description = "Guided data collection."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    # Maniskill dependencies
    "numpy>=1.22,<2.0.0",
    "scipy",
    "dacite",
    "gymnasium==0.29.1",
    "sapien==3.0.0.b1",
    "h5py",
    "pyyaml",
    "tqdm",
    "GitPython",
    "tabulate",
    "transforms3d",
    "trimesh",
    "imageio",
    "imageio[ffmpeg]",
    "mplib==0.1.1;platform_system=='Linux'",
    "fast_kinematics==0.2.2;platform_system=='Linux'",
    "IPython",
    "pytorch_kinematics_ms==0.7.3",  # pytorch kinematics package for ManiSkill forked from https://github.com/UM-ARM-Lab/pytorch_kinematics
    "tyro>=0.8.5",  # nice, typed, command line arg parser
    "huggingface_hub",  # we use HF to version control some assets/datasets more easily
    "torch",
    "torchvision",
    "torchaudio",
    # Guided-dc dependencies
    "omegaconf==2.3.0",
    "hydra-core==1.3.2",
    "moviepy==2.1.1",
    "matplotlib",
    "timm",
    "peft",
    "wandb",
    "einops",
    "av==12.3.0",
    "GPUtil",
    "open3d",
    "pydantic",
    "pyglet==1.5.29",
    "pre-commit>=4.0.1",
    "objaverse"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["data", "logs", "log", "wandb"]

[tool.wheel]
exclude = []

# Maniskill
[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
    "gpu_sim: marks tests as using the GPU simulation (deselect with '-m \"not gpu_sim\"')",
    "serial",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["calculation.ipynb", "diffusion/model/diffusion/diffusion.py"]
lint.select = ["A", "B", "E", "F", "I", "RUF", "W"]
lint.ignore = ["E203", "E501", "B006", "B026", "B905"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]
